# Timeline

./: .dockerignore  .editorconfig  .gitignore  CHANGELOG.md  LICENSE-Assets  LICENSE-CODE  LICENSE-Code  LICENSE-ICON  README.md  docker-compose.yml  package.xml  pyproject.toml  run-freecad-integration.bat
.github/: CONTRIBUTING.md
Documentation/: README.md  TipTrack_Plan.3.0.md
Documentation/Usage/: Howto-Install.md  Howto-X.md
Resources/Documents/: Overview.md
docker/: Dockerfile.integration  integration-entrypoint.sh
freecad/Minimal/: __init__.py  init_gui.py
freecad/Minimal/misc/: __init__.py  resources.py
freecad/TipTrack/: __init__.py  body_resolver.py  dock.py  feature_item.py  folders.py  i18n.py  init_gui.py  observer.py  placement_history.py  preferences.py  reorder.py  strip.py  timeline_scrubber.py  tip_controller.py
freecad/TipTrack/Qt/: Core.py  Gui.py  Widget.py  __init__.py
freecad/TipTrack/Resources/translations/: TipTrack_en.ts
freecad/TipTrack/misc/: __init__.py  resources.py
tests/: conftest.py  test_body_resolver.py  test_folders.py  test_init_gui.py  test_observer_placement.py  test_phase0_imports.py  test_placement_history.py  test_reorder.py  test_tip_controller.py
tests/integration/: freecad_tiptrack_gui_smoke.py  freecad_tiptrack_placement_smoke.py  freecad_tiptrack_reorder_smoke.py
