# SPDX-License-Identifier: CC0-1.0
# SPDX-FileNotice: Development tooling for the TipTrack addon.

[project]
name = "tiptrack"
version = "0.1.0"
description = "FreeCAD addon that displays a PartDesign Body feature history timeline."
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "PySide6>=6.5",
]

[tool.ruff]
line-length = 88
target-version = "py310"
